--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,18 @@
-:8080
+:1235
+file_server
 
-log / stdout "{common} {referer}"
+log / stdout "{common}"
+
+handle_errors {
+  @404 {
+      expression {http.error.status_code} == 404
+  }
+  rewrite @404 index.html
+}
 
 reverse_proxy localhost:1234
+# root * /dist
+
+encode zstd gzip
+
+try_files {path}.html {path}
