--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "parcel index.html",
-    "build": "rm -rf .cache && parcel build index.html --no-autoinstall",
+    "build": "rm -rf .cache && NODE_ENV=production parcel build index.html --no-autoinstall",
     "standard": "standard",
     "standard:fix": "standard --fix",
     "stylelint": "stylelint styles/*",
