--- a/package.json
+++ b/package.json
@@ -2,18 +2,10 @@
   "name": "systemnytt",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/polyfill": "^7.10.1",
-    "@hyperapp/router": "^0.7.2",
-    "hyperapp": "^1.2.5",
-    "hyperapp-redux-devtools": "^1.1.6",
-    "uuid": "^7.0.3"
-  },
+  "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "rm -rf .cache && NODE_ENV=production parcel build index.html --no-autoinstall",
+    "start": "webpack-dev-server --progress",
+    "build": "webpack --config webpack.prod.js",
     "standard": "standard",
     "standard:fix": "standard --fix",
     "stylelint": "stylelint styles/*",
@@ -48,14 +40,34 @@
     "url": "https://github.com/jonasstenberg/systemnytt/issues"
   },
   "homepage": "https://github.com/jonasstenberg/systemnytt#readme",
+  "dependencies": {
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^3.5.2",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "hyperapp": "^1.2.5",
+    "hyperapp-redux-devtools": "^1.1.6",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.27",
+    "postcss-import": "^12.0.1",
+    "postcss-inline-svg": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.1.4",
+    "stylelint": "^13.3.2",
+    "stylelint-config-recess-order": "^2.0.4",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-webpack-plugin": "^1.2.3",
+    "terser-webpack-plugin": "^3.0.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
   "devDependencies": {
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.3.1",
-    "parcel-plugin-stylelint-all": "^0.2.0",
     "standard": "^14.3.3",
-    "stylelint-config-recess-order": "^2.0.4",
-    "stylelint-config-standard": "^20.0.0"
+    "standard-loader": "^7.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
